# fractonica

./: .gitignore  CMakeLists.txt  fips.yml  platformio.ini
core/: CMakeLists.txt  library.json
core/include/: App.h  EventLogger.h  IAudioRecorder.h  ICamera.h  IDisplay.h  IFileHandle.h  IInput.h  IMatrix.h  IMemoryStorage.h  ITask.h  ITime.h  IUnixClock.h  LunarClockApp.h  LunarGlyph.h  LunarTime.h  MatrixClock.h  OctalGlyph.h  SineLUT.h  Synth.h  ToneGenerator.h  TransientUnixClock.h  Utils.h  Vector2.h  apogee.h  new_moon.h  nodal_ascending.h  saros.h
core/include/saros/lunar/: eclipse_info_modern.h  eclipse_times_modern.h  saros_modern.h
core/include/saros/solar/: eclipse_info_modern.h  eclipse_times_modern.h  saros_modern.h
core/src/: App.cpp  Base8HeptClock.cpp  Ephemeris.cpp  LunarClockApp.cpp  LunarGlyph.cpp  OctalGlyph.cpp
core/src/saros/: lunar_impl.c  solar_impl.c
embedd/: CMakeLists.txt  platformio.ini
embedd/lib/arduino/: library.json
embedd/lib/arduino/include/: ArduinoBoot.h
embedd/lib/esp32/: library.json
embedd/lib/esp32/include/: WifiClock.h
embedd/lib/esp32/src/: WifiClock.cpp
embedd/lib/hardware/: library.json
embedd/lib/hardware/include/: DS1307UnixClock.h  DS3231.h  Esp32Boot.h  I2SAudio.h  I2SRecorder.h  OV2640Camera.h  OctalDigitFace.h  SDMMCFileSystem.h  SDMMCStorage.h  SSD1306Display.h  WS2812Matrix.h
embedd/lib/hardware/src/: Adafruit_GFX.cpp  Adafruit_SSD1306.cpp  DS1307UnixClock.cpp  WS2812Matrix.cpp
embedd/lib/led-matrix/: library.json
embedd/lib/led-matrix/include/: LedMatrix.h
embedd/lib/mega2560display/: library.json
embedd/lib/mega2560display/include/: ArduinoInput.h  ILI9481Display.h  Mega2560Boot.h  hw_interface.h  ili9481_driver.h
embedd/lib/mega2560display/src/: hw_interface.cpp  ili9481_driver.cpp
embedd/lib/pyramid-clock/: library.json
embedd/lib/pyramid-clock/include/: PyramidClock.h
embedd/lib/recorder/: library.json
embedd/lib/recorder/include/: Recorder.h
embedd/src/: main.cpp
fips-files/configs/: ios.yml  linux.yml  macos.yml  web.yml  win.yml
fips-files/verbs/: webpage.py
ios/: AppDelegate.mm  Info.plist.in  ViewController.mm
lib/arduino/include/: ArduinoBoot.h
lib/core/include/: Base8HeptClock.h  Ephemeris.h  IDisplay.h  LunarTime.h  StubDisplay.h  apogee.h  new_moon.h  nodal_ascending.h
lib/core/src/: App.cpp  Base8HeptClock.cpp  Ephemeris.cpp  LunarTime.cpp  MatrixClock.cpp
lib/desktop/: library.json
lib/desktop/include/: Debug.h  DesktopApp.h  DesktopBoot.h  FileSystemStorage.h  ImGuiInput.h  ImGuiMatrix.h  SFMLDisplay.h  UnixClock.h
lib/desktop/src/: FileSystemStorage.cpp  ImGuiMatrix.cpp  SFMLDisplay.cpp  UnixClock.cpp
lib/hardware/: library.json
lib/hardware/include/: DS3231UnixClock.h
lib/hardware/src/: DS3231.cpp  DS3231UnixClock.cpp
lib/imgui/: library.json
lib/imgui/include/: imconfig-SFML.h
lib/imgui/src/: imgui-SFML.cpp
lib/imgui/src/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
lib/mega2560display/include/: ILI9481Display.h  Mega2560Boot.h  ili9481_font.h
lib/mega2560display/src/: ILI9481Display.cpp
libs/astro/: cspice_utils.hpp  kernels.hpp  moon.hpp
libs/sokol/: CMakeLists.txt  sokol.c
scripts/: build_web.sh  deploy_web.sh  run_macos.sh  run_win.cmd
src/: Audio.h  CMakeLists.txt  ComputeShader.h  ComputeTexture.h  DesktopApp.cpp  DesktopApp.h  GuiUtils.h  ImGuiDisplay.cpp  ImGuiDisplay.h  Mandelbrot.h  SolidExplorer.h  SpriteRenderer.h  Synth.h  UnixClock.cpp  UnixClock.h  compute.glsl  compute.glsl.h  glyph.cpp  glyph.h  instancing.glsl.h  main.cpp  mesh.hpp  mesh_builder.hpp
src/shaders/: instancing.glsl  mandelbrot.glsl
tools/: build_ios.sh  build_wasm.ps1  build_win.ps1  ephemeris_gen.py  pio_targets.py
web/: index.html
web/www/: site.webmanifest
webpage/: manifest.json  shell.html  sw.js
